--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,10 +3,6 @@ name = "yttrium"
 version = "0.1.0"
 edition = "2021"
 
-[dependencies.uuid]
-version = "1.11.0"
-features = [
-  "v4",                # Lets you generate random UUIDs
-  "fast-rng",          # Use a faster (but still sufficiently random) RNG
-  "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
-]
+[dependencies]
+tracing = "0.1.40"
+tracing-subscriber = "0.3.18"
